--- a/CarInsuranceQuotes/CarInsuranceQuotes/Views/Admin/Index.cshtml
+++ b/CarInsuranceQuotes/CarInsuranceQuotes/Views/Admin/Index.cshtml
@@ -11,7 +11,7 @@
         <div class="col-3">First Name</div>
         <div class="col-3">Last Name</div>
         <div class="col-3">Email Address</div>
-        <div class="col-3">Coverage Type</div>
+        <div class="col-3">Total Cost</div>
     </div>
 </div>
 
@@ -32,8 +32,7 @@
                     @quote.EmailAddress
                 </div>
                 <div class="col-3">
-                    @quote.CoverageType
-                    <!--Change this to Price later once I've created the method-->
+                    @quote.TotalCost 
                 </div>
             </div>
         }
